REST API mapping added, WebConfig CORS added, updated controller, now methods return ResponseEntity